# deoxys

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  2.txt  3.txt  README.rst  requirements.txt  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: .readthedocs.yml  Makefile  conf.py  data.rst  index.rst  installation.rst  make.bat  model.rst  modules.rst  usage.rst
examples/: MNIST-experiment.py  MNIST-sequential.py  oxford-iiot-pet-db-experiment.py  oxford-iiot-pet-experiment.py  oxford-iiot-pet-multi-experiment.py  oxford-iiot-pet-unet.py  sample-unet.py  terminal-app-hn-example.py  unet-experiment.py  unet-from-file.py  unet-sample-experiment.py  unet-sample-run-test.py  visualization_hn.py  visualization_vgg.py  web-example.py
examples/json/: oxford-pet-config-multloss.json  oxford-pet-config.json  sequential-config.json  unet-config.json  unet-sample-config.json  vnet-sample-config.json
notebooks/: DAT390_Report.ipynb  convert_to_pdf.txt  dat390_report.bib  dat390_report.tplx
pip-wheel-metadata/deoxys.dist-info/: LICENSE.txt  METADATA  top_level.txt
scripts/: activation_map_max_filters.py  activation_maps.py  activation_maps_filters.py  backprop.py  backprop_fn.py  deconvnet.py  deconvnet_fn.py  guided_backprop.py  guided_backprop_fn.py
src/deoxys/: __init__.py
tests/: __init__.py
tests/automation/: test_auto_architecture.py
tests/data/: datareader_test.py  preprocessor_test.py  test_datareader.py  test_preprocessor.py
tests/experiment/: test_single_experiment.py
tests/h5_files/: model.002.h5  sample_dataset_xs_3d.h5
(+96 files in other folders)
