

[metadata]
name = deoxys
keywords=deoxys
version = 0.0.1
license = "MIT license",
description = Keras-based framework for UNet structure in Cancer Tumor Delineation
long_description = file: README.rst
author = Ngoc Huynh Bao
author_email = ngoc.huynh.bao@nmbu.no
url=https://github.com/huynhngoc/deoxys
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    tensorflow == 2.1.0
    numpy
    scipy
    h5py
    pandas
    matplotlib

[options.packages.find]
where=src





[bdist_wheel]
universal = 1



[flake8]
exclude = docs
max-line-length = 79
